Added Google Form + Package Info

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <a class="nav-link" href="#pricing">Pricing</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#cta">Portfolio</a>
+                <a class="nav-link" href="#testimonial-carousel">Reviews</a>
               </li>
             </ul>
           </div>
@@ -80,16 +80,16 @@
         <div class="row">
           <div class="col-lg-6">
             <h1 class="big-heading">
-              Prepare you for your college CS Degree and Big Tech Internship.
+              Get Ready for your college CS Degree and your Big Tech Internship.
             </h1>
 
-            <form action="https://calendly.com/jarafotostudio">
+            <form action="https://calendly.com/jarafotostudio/30-minute-session?back=1&month=2022-06">
               <button
                 type="submit"
                 type="button"
                 class="btn btn-dark btn-lg download-button"
               >
-                Schedule A Session
+                Schedule Your Free Consultation
               </button>
             </form>
 
@@ -121,7 +121,7 @@
             <i class="icon fas fa-bullseye fa-4x"></i>
             <h3 class="feature-title">Ivy League Mentors</h3>
             <p>
-              All our tutors/mentors are Ivy League Alumi who currently works at big tech firms/unicorns.
+              All our tutors/mentors are Ivy League Alumni who currently work at Big Tech Companies.
             </p>
           </div>
 
@@ -129,7 +129,7 @@
             <i class="icon fas fa-heart fa-4x"></i>
             <h3 class="feature-title">High Quality Feedback and Guidance</h3>
             <p>
-              We provide feedbacks to our studnets frequently and next-step guidance. All you need to focus on is execution.
+              We frequently provide feedback and next-step guidance to our students. All you need to focus on is execution.
             </p>
           </div>
         </div>
@@ -143,7 +143,7 @@
         <div class="carousel-inner">
           <div class="carousel-item active container-fluid">
             <h2 class="testimonial-text">
-              I used Jara Code during my sophomore year in high school, and I couldn't believe how far ahead I was in college. I got an internship offer from Google my freshman summer in college.
+              I used JARA CODE during my sophomore year in high school, and I couldn't believe how far ahead I was in college. I got an internship offer from Google my freshman summer in college.
             </h2>
             <img
               class="testimonial-image"
@@ -154,7 +154,7 @@
           </div>
           <div class="carousel-item container-fluid">
             <h2 class="testimonial-text">
-              Jara Code was a great use of my time during summers in high school. I was tutored by Stanford Alumni, and 2 years later, I am persuing my own CS degree at Stanford. It felt like a dream.
+              JARA CODE was a great use of my time during summers in high school. I was tutored by Stanford Alumni, and 2 years later, I am pursuing my own CS degree at Stanford. It feels like a dream.
             </h2>
             <img
               class="testimonial-image"
@@ -222,25 +222,24 @@
 
     <section class="white-section" id="pricing">
       <h2 class="section-heading">A Plan for Every Student's Needs</h2>
-      <p>Simple and affordable price plans for you and your high school squad.</p>
+      <p>Simple and affordable price plans for you and your friends.</p>
 
       <div class="row">
         <div class="pricing-column col-lg-4">
           <div class="card">
             <div class="card-header">
-              <h3>Beginner Coding Camp</h3>
+              <h3>Beginner Coding Bootcamp</h3>
             </div>
             <div class="card-body">
-              <h2 class="price-text">$2000</h2>
+              <h2 class="price-text">$3,000</h2>
               <p>No CS background required</p>
-              <p>4 weeks</p>
-              <p>20 hours of classes + office hours + in-person Q&A session</p>
-              <p>Up to 3 individuals</p>
+              <p>8 weeks</p>
+              <p>20 hours of online classes + vitual office hours & Q&A sessions</p>
               <ol>
                 Focus on core CS fundamentals and concepts
               </ol>
               <form
-                action="https://calendly.com/jarafotostudio/30-minute-session"
+                action="https://docs.google.com/forms/d/e/1FAIpQLSd0K659tcMNt8Rzr7sjywmh5TRsP5p_8urqI1MJsUS0XUrULA/viewform"
               >
                 <button
                   type="submit"
@@ -260,19 +259,18 @@
               <h3>Intermediate Coding Bootcamp</h3>
             </div>
             <div class="card-body">
-              <h2 class="price-text">$3000</h2>
+              <h2 class="price-text">$5,000</h2>
               <p>Basic Understanding of Data Structures is recommended but not required</p>
-              <p>4 weeks</p>
-              <p>10 hours of lecture + 10 hours of hands-on coding clinic</p>
-              <p>Up to 3 individuals</p>
+              <p>8 weeks</p>
+              <p>10 hours of online classes + 10 hours of vitual hands-on coding clinic</p>
               <ol>
                 Focus on data structures and algorithm
               </ol>
               <ol>
-                Recommended for students who are aiming for big tech summer interships
+                Recommended for students who are aiming for Big Tech summer interships
               </ol>
               <form
-                action="https://calendly.com/jarafotostudio/45-minute-session"
+                action="https://docs.google.com/forms/d/e/1FAIpQLSd0K659tcMNt8Rzr7sjywmh5TRsP5p_8urqI1MJsUS0XUrULA/viewform"
               >
                 <button
                   type="submit"
@@ -292,20 +290,19 @@
               <h3>Mock Interview</h3>
             </div>
             <div class="card-body">
-              <h2 class="price-text">$100</h2>
-              <p>1 hour</p>
-              <p>1-2 individuals</p>
+              <h2 class="price-text">$500</h2>
+              <p>3 x 45-minute mock interviews</p>
               <ol>
-                Strong Understanding of data strucutre concepts, Able to solve problems individually
+                Strong Understanding of data structure concepts, Able to solve problems individually
               </ol>
               <ol>
                 Focus on coding interview skills
               </ol>
               <ol>
-                Recommended for students who need mock interview and feedbacks from real Big Tech Interviews
+                Recommended for students who need mock interviews and feedbacks from current Big Tech Interviewers
               </ol>
               <form
-                action="https://calendly.com/jarafotostudio/60-minute-session"
+                action="https://docs.google.com/forms/d/e/1FAIpQLSd0K659tcMNt8Rzr7sjywmh5TRsP5p_8urqI1MJsUS0XUrULA/viewform"
               >
                 <button
                   type="submit"
@@ -327,30 +324,19 @@
     <section class="colored-section" id="cta">
       <div class="container-fluid">
         <h3 class="big-heading">
-          Prepare you for your college CS Degree and Big Tech Internship.
+          Book your Free Consulation now and Get Started on your Computer Science Journey.
         </h3>
-        <form
-          class="form1"
-          action="https://www.flickr.com/photos/195503236@N07/"
-        >
+
+        <form action="https://calendly.com/jarafotostudio/30-minute-session?back=1&month=2022-06">
           <button
             type="submit"
-            class="download-button btn btn-lg brn-light"
             type="button"
+            class="btn btn-dark btn-lg download-button"
           >
-            Portfolio
+            Schedule Your Free Consultation
           </button>
         </form>
 
-        <form class="form2" action="https://youtu.be/uOZW7RCmEAo">
-          <button
-            type="submit"
-            class="download-button btn btn-lg brn-light"
-            type="button"
-          >
-            Drone Video Demo
-          </button>
-        </form>
       </div>
     </section>
 
@@ -362,7 +348,7 @@
         <i class="social-icon fab fa-twitter"></i>
         <i class="social-icon fab fa-instagram"></i>
         <i class="social-icon fas fa-envelope"></i>
-        <p>Email: jarafotostudio@gmail.com</p>
+        <p>Email: jaracodeacademy@gmail.com</p>
         <p>
           All scheduling cancellation requests must be received 5 days prior to the scheduled dates.
         </p>
