--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <!-- Nav Bar -->
 
       <nav class="navbar navbar-expand-lg navbar-dark">
-        <a class="navbar-brand" href="">JARA CODE</a>
+        <a class="navbar-brand" href="">JARA CODE ACADEMY</a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02">
           <span class="navbar-toggler-icon"></span>
@@ -56,7 +56,7 @@
             Make the most out of your CS Degree and Ace your Big Tech Interview
           </h1>
 
-          <form action="https://calendly.com/jarafotostudio/30-minute-session?back=1&month=2022-06">
+          <form action="https://docs.google.com/forms/d/e/1FAIpQLSd8OcdyWEaJK0GhwXvM5-5jkBCu8gQ0VKGAQWqjRjHQxMa5jA/viewform">
             <button type="submit" type="button" class="btn btn-dark btn-lg download-button">
               Information Request
             </button>
@@ -264,7 +264,7 @@
     <div class="pricing-column col-lg-4">
       <div class="card">
         <div class="card-header">
-          <h3>College Planning + Career Coaching Subscription</h3>
+          <h3>CS Degree & Big Tech Career Planning Package</h3>
         </div>
         <div class="card-body">
           <h2 class="price-text">$1,200</h2>
@@ -299,12 +299,12 @@
   <section class="colored-section" id="cta">
     <div class="container-fluid">
       <h3 class="big-heading">
-        Submit your Interest Form now and Get Started on your Big Tech Journey.
+        Submit your Information Request now and Get Started on your Big Tech Journey.
       </h3>
 
-      <form action="https://calendly.com/jarafotostudio/30-minute-session?back=1&month=2022-06">
+      <form action="https://docs.google.com/forms/d/e/1FAIpQLSd8OcdyWEaJK0GhwXvM5-5jkBCu8gQ0VKGAQWqjRjHQxMa5jA/viewform">
         <button type="submit" type="button" class="btn btn-dark btn-lg download-button">
-          Interest Form
+          Information Request
         </button>
       </form>
 
